# django-admin-form-action

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
admin_form_action/: __init__.py
admin_form_action/templates/admin_form_action/: form.html  input_form.html
extended_actions/: __init__.py  apps.py
extended_actions/templates/extended_actions/: form.html
tests/: manage.py  test_extended_actions.py  test_form_action.py
tests/app/: admin.py  asgi.py  settings.py  wsgi.py
tests/app/templates/admin_form_action/: custom_form.html
