[tool.poetry]
name = "django-admin-extended-actions"
packages = [{ include = "extended_actions" }]
license = "MIT"
version = "0.1.0"
description = "Parametrized actions for Django admin site"
authors = ["Dmitry Kolyagin <dmitry.kolyagin@gmail.com>"]
repository = "https://github.com/pauk-slon/django-admin-extended-actions"
readme = "README.md"
classifiers = [
    "Framework :: Django",
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
