[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-admin-form-action"
packages = [
    { include = "admin_form_action" },
    { include = "admin_form_action/py.typed" },
]
license = "MIT"
version = "0.2.0"
description = "Parametrized actions for Django admin site"
authors = ["Dmitry Kolyagin <dmitry.kolyagin@gmail.com>"]
repository = "https://github.com/pauk-slon/django-admin-form-action"
readme = "README.md"
keywords = ["django", "admin", "action"]
classifiers = [
    "Framework :: Django :: 3",
    "Framework :: Django :: 4"
]

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3"

[tool.poetry.group.dev.dependencies]
model-bakery = "*"
pytest = "*"
pytest-django = "*"
pytest-cov = "*"
isort = "*"
ruff = "*"
mypy = "*"
django-stubs = {extras = ["compatible-mypy"], version = "*"}
django-stubs-ext = "*"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.app.settings"

[tool.pytest.ini_options]
addopts = [
    "--ds=tests.app.settings",
    "--cov=admin_form_action",
    "--cov-report=term-missing:skip-covered",
]
